# common-ci-config

./: .gitignore  README.md
makefile/: Makefile
makefile/.konveyor/ansible/: .pre-commit-config.yaml  setup_env.mk  tests.mk
makefile/.konveyor/go/: setup_env.mk  tests.mk
makefile/.konveyor/pre-commit/: setup_env.mk
makefile/.konveyor/python/: .pre-commit-config.yaml  setup_env.mk  tests.mk
makefile/python/: .pre-commit-config.yaml  tests.mk
makefile/scripts/: install_dev_tools  install_python_requirements
test-projects/python/HelloWorld/: .konveyor  .pre-commit-config.yaml  Makefile  README.md  python  setup.cfg  setup.py
test-projects/python/HelloWorld/project/: main.py
