[metadata]
name = Hello World
version = 0.0.1
description = Sample Hello World application to run Make against
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/konveyor/common-ci-config
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = project

[options.entry_points]
console_scripts =
    helloworld = project.main:main
